Fix FlexText card alignment.

--- a/_scss/bbg/components/_cards.scss
+++ b/_scss/bbg/components/_cards.scss
@@ -377,6 +377,18 @@
             margin: 0;
             padding: 16px;
 
+            &.align-left {
+                text-align: left;
+            }
+
+            &.align-center {
+                text-align: center;
+            }
+
+            &.align-right {
+                text-align: right;
+            }
+
             &.font-tiny {
                 font-size: 1.3rem;
                 line-height: 1.8rem;
